fix: z-index for header

--- a/theme/styles/shared.scss
+++ b/theme/styles/shared.scss
@@ -17,6 +17,7 @@
    * Compared with font "Segeo UI" used into Bootstrap website.
    */
   --font-serif: 'EB Garamond', serif;
+  --z-index-max: 10;
 }
 
 body {
